<resources>
    <string name="app_name">Katalog Wisata</string>
    <string name="label_must_fill">Wajib diisi.</string>
    <string name="list_destination">List Destination</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="unlike">Unlike</string>
    <string name="rute">Rute</string>
    <string name="like">Like</string>
    <string name="todo4">TODO</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="todo5">TODO</string>
    <string name="todo6">TODO</string>
    <string name="name">Name</string>
    <string name="nama_empty">Nama empty</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_empty">Phone empty</string>
    <string name="daftar_wisata">Daftar Wisata</string>
    <string name="enter">Enter</string>
    <string name="todo7">TODO</string>
    <string name="todo8">TODO</string>
    <string name="welcome_back">Welcome back</string>
    <string name="save">Save</string>
    <string name="deskription">Deskription</string>
    <string name="unsave">Unsave</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="interesting_and_popular_tourist_spots">Interesting and Popular Tourist Spots</string>
    <string name="most_popular_tourist_spots">Most Popular Tourist Spots</string>
    <string name="todo9">TODO</string>
    <string name="search">search</string>
    <string name="todo10">TODO</string>
    <string name="todo11">TODO</string>
    <string name="todo12">TODO</string>
    <string name="nature">Nature</string>
    <string name="todo13">TODO</string>
    <string name="park">Park</string>
    <string name="todo14">TODO</string>
    <string name="all">All</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="todo15">TODO</string>
    <string name="profil">Profil</string>
    <string name="todo16">TODO</string>
    <string name="todo17">TODO</string>
    <string name="nama">Nama</string>
    <string name="phone_number11">Phone Number</string>
    <string name="profile">Profile</string>
    <string name="list">list</string>
    <string name="edit_profile2">Edit Profile</string>
    <string name="phone_empty2">Phone Empty</string>
    <string name="name_empty">Name Empty</string>
    <string name="name2">Name</string>
    <string name="favorite">Favourite</string>
    <string name="todo18">TODO</string>
    <string name="name_tour">Name Tour</string>
    <string name="todo19">TODO</string>
    <string name="todo20">TODO</string>
    <string name="todo21">TODO</string>
    <string name="todo22">TODO</string>
</resources>