<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="user"
            type="com.example.katalogwisata.data.user.User" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.profile.ProfileActivity">

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_42sdp"
            android:background="@color/blue_300"
            android:gravity="fill_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:id="@+id/iv_back_profil"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="?selectableItemBackground"
                android:contentDescription="@string/todo15"
                android:elevation="@dimen/_30sdp"
                android:foreground="?selectableItemBackground"
                android:src="@drawable/ic_back" />

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_70sdp"
                android:gravity="center"
                android:text="@string/profile"
                android:textColor="@color/white"
                android:textSize="@dimen/_20ssp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iv_logout"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_70sdp"
                android:background="?selectableItemBackground"
                android:contentDescription="@string/todo16"
                android:foreground="?selectableItemBackground"
                android:src="@drawable/ic_logout"
                app:tint="@color/white" />
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_profil"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_220sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:contentDescription="@string/todo17"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/img_person" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_265sdp"
            android:text="@string/name2"
            android:textColor="@color/blue_300"
            android:textSize="@dimen/_16ssp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_285sdp"
            android:layout_marginEnd="@dimen/_18sdp"
            android:autofillHints="username"
            android:hint="@string/name_empty"
            android:text='@{user.name}'
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_325sdp"
            android:text="@string/phone_number11"
            android:textColor="@color/blue_300"
            android:textSize="@dimen/_16ssp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_345sdp"
            android:layout_marginEnd="@dimen/_18sdp"
            android:autofillHints="creditCardNumbern"
            android:hint="@string/phone_empty2"
            android:text='@{user.phoneNumber}'
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp" />

        <Button
            android:id="@+id/btn_edit_profil"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_500sdp"
            android:background="@drawable/custom_button2"
            android:foreground="?selectableItemBackground"
            android:text="@string/edit_profile2"
            android:textAllCaps="false"
            android:textSize="@dimen/_17sdp" />


    </RelativeLayout>

</layout>