<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="data"
            type="com.example.katalogwisata.data.user.Tour" />

        <import type="android.view.View" />
    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_tour"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_220sdp"
        android:layout_margin="@dimen/_10sdp"
        android:orientation="vertical"
        app:cardCornerRadius="@dimen/_4sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/image_view_list"
                imageUrl='@{data.image}'
                android:layout_width="match_parent"
                android:layout_height="@dimen/_120sdp"
                android:contentDescription="@string/todo19"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_view_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:padding="@dimen/_3sdp"
                android:text='@{data.name}'
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_view_list"
                tools:text="Place Name" />

            <ImageView
                android:id="@+id/image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/todo20"
                android:src="@drawable/ic_location"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.043"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_name"
                app:layout_constraintVertical_bias="0.031" />

            <TextView
                android:id="@+id/text_view"
                android:layout_width="@dimen/_140sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:maxLines="1"
                android:text='@{data.address}'
                android:textSize="@dimen/_12sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.239"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_view_list"
                app:layout_constraintVertical_bias="0.333"
                tools:text="Place Address" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/heart_plain"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/_180sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:contentDescription="@string/todo21"
                    android:src="@drawable/ic_turned_frame"
                    android:visibility='@{data.like == "true" ? View.GONE : View.VISIBLE}' />

                <ImageView
                    android:id="@+id/heart_read"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/_180sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:contentDescription="@string/todo22"
                    android:src="@drawable/ic_turned_black"
                    android:visibility='@{data.like != "true" ? View.GONE : View.VISIBLE}'
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>

